# c-sss

./: .astylerc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  _r_e_a_d_m_e_8md_source.html  bug.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  index.html  link_git_modules  pages.html  shamir_8c_source.html  shamir_8h.html  shamir_8h_source.html
search/: all_1.js  all_73.js  files_73.js  functions_0.js  functions_2.js  functions_65.js  search.js  searchdata.js
src/: GLibFacade.c  GLibFacade.h  main.c  shamir.c  shamir.h  strtok.c  strtok.h
templates/: README.md.in  doxygen.conf.in  template.c.in
